<resources>
    <string name="app_name">MovieSeeker</string>
    <string name="settings">settings</string>
    <string name="main">main</string>
    <string name="favorite">favorite</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="home">home</string>
    <string name="favourites_button">favourites</string>
    <string name="ratings_button">ratings</string>
    <string name="change_movies_list_floating_button">change_movies_list</string>
    <string name="production_year">Production year</string>
    <string name="snackbar_error">Error!</string>
    <string name="snackbar_reload">Reload</string>
    <string name="oops_error_occured">OOPS! Error Occured!</string>
    <string name="default_movie_name">No name movie</string>
    <string name="recent_history_item_menu">recent history</string>
    <string name="contacts_menu_item">contacts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ask_permission">Please permit access to your contacts</string>
    <string name="please_enter_address_maps">Please enter address</string>
    <string name="start">start</string>
    <string name="long_click">From long click</string>
    <string name="map_menu_item">MAP</string>
    <string name="map_mode">Map mode</string>
    <string name="normal">normal</string>
    <string name="satellites">satellites</string>
    <string name="terrain">terrain</string>
    <string name="traffic">traffic</string>
    <string name="need_permissions_to_find_location">Need permission to find location</string>
    <string name="default_address">Москва, Красная площадь 1</string>
</resources>