<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_main"
        android:icon="@android:drawable/ic_menu_compass"
        android:orderInCategory="10"
        android:title="@string/main"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_history"
        android:title="@string/recent_history_item_menu"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_contacts"
        android:title="@string/contacts_menu_item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_google_maps"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/map_menu_item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/btn_star_big_on"
        android:orderInCategory="20"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="5"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10"
        android:title="@string/add"
        app:showAsAction="always" />

</menu>